# plover_last_translation

./: setup.cfg
plover_last_translation/: macro.py
