[metadata]
name = plover_korean_josa
version = 1.0.0
description = Plover plugin for Korean Josa (Eul/Reul) automation
long_description = file: README.rst
author = User
author_email = user@example.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/pvj510-cmyk/plover_last_translation
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin korean josa

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
packages =
    plover_last_translation

[options.entry_points]
plover.macro =
    josa_r = plover_last_translation.macro:josa_last_translation
    repeat_last_translation = plover_last_translation.macro:repeat_last_translation
    repeat_last_word = plover_last_translation.macro:repeat_last_word
    repeat_last_fragment = plover_last_translation.macro:repeat_last_fragment
    repeat_last_character = plover_last_translation.macro:repeat_last_character

plover.meta =
    # 메타 형식으로도 등록 (필요시 사용)
    josa_ㄹ = plover_last_translation.macro:josa_last_translation
    repeat_last_translation = plover_last_translation.meta:repeat_last_translation
    repeat_last_word = plover_last_translation.meta:repeat_last_word
    repeat_last_fragment = plover_last_translation.meta:repeat_last_fragment
    repeat_last_character = plover_last_translation.meta:repeat_last_character
